# ParadiddleUtilities

./: .gitattributes  .gitignore  Build.bat  PDUtil.bat  PDUtil.py  PDUtil.sh  PDUtil.spec  PDUtil.waste  README.md  RunPDUtil.bat  TODO.md  midi_companion.ui  midi_mapping.yaml  midiconvert.py  pdtracks_mapping.yaml  pyproject.toml  requirements.txt  rlrrschema.json  thanks
.github/workflows/: main.yml
PDUtilities/: __main__.py  midicompanion.py  midiconvert.py  pd_gui.py  pd_gui_layout.ui  song_display.py
PDUtilities/interface/: midi_companion.ui  pd_gui_layout.ui  pd_gui_layout.waste
PDUtilities/midi_maps/: Rockband_Phaseshift_Clone_hero.yaml  midi_mapping.yaml  pdtracks_mapping.yaml  rhythm_ game_mapping.yaml
PDUtilities/ui_layouts/: pd_gui_layout.ui  song_display_layout.ui
docs/: rlrrschema.json
env/Lib/: orig-prefix.txt  struct.pyo
env/Scripts/: activate  activate.bat  activate.xsh  mido-connect  mido-play  mido-ports  mido-serve
midi_files/: converted.json  notes.mid
rlrr_files/: notes_converted.json  notes_converted.rlrr
src/main/python/: ParadiddleUtilities.py  main.py  midiconvert.py
src/main/resources/base/midi_files/: notes2.mid
src/main/resources/base/midi_files/02 - Song 2/: notes.mid  song.ini
src/main/resources/base/midi_files/05 - All Along the Watchtower/: notes.mid  song.ini
src/main/resources/base/midi_files/06 - In My Place/: notes.mid  song.ini
src/main/resources/base/midi_files/12 - Feel Good Inc/: notes.mid  song.ini
src/main/resources/base/midi_files/15 - Go Your Own Way/: notes.mid  song.ini
src/main/resources/base/midi_files/22 - Smells Like Teen Spirit/: notes.mid  song.ini
src/main/resources/base/midi_files/25 - A-Punk/: notes.mid  song.ini
src/main/resources/base/midi_files/33 - Sex On Fire/: notes.mid  song.ini
src/main/resources/base/midi_files/37 - Everlong/: crowd.ogg.asd  drums_1.ogg.asd  drums_2.ogg.asd  drums_3.ogg.asd  drums_4.ogg.asd  guitar.ogg.asd  notes.mid  song.ini  song.ogg.asd  vocals.ogg.asd
src/main/resources/base/midi_files/40 - Santeria/: notes.mid  song.ini
src/main/resources/base/midi_files/60 - You Give Love a Bad Name/: notes.mid  song.ini
src/main/resources/base/midi_files/79 - Brianstorm/: notes.mid  song.ini
src/main/resources/base/midi_files/Brooklyn (Youngblood Brass Band)/: notes.mid  song.ini
src/main/resources/base/midi_files/David Bowie - Space Oddity/: notes.mid  song.ini
src/main/resources/base/midi_files/Green Day - American Idiot/: song.ini
src/main/resources/base/midi_files/Green Day - Basket Case/: song.ini
src/main/resources/base/midi_files/Green Day - Boulevard of Broken Dreams/: song.ini
src/main/resources/base/midi_files/Green Day - Good Riddance (Time of Your Life)/: song.ini
src/main/resources/base/midi_files/Green Day - Holiday/: song.ini
src/main/resources/base/midi_files/Lynyrd Skynyrd - Free Bird/: notes.mid  song.ini
src/main/resources/base/midi_files/Queens of the Stone Age - No One Knows/: notes.mid  song.ini
src/main/resources/base/midi_files/Rammstein - Du Hast/: song.ini  (+1 more)
src/main/resources/base/midi_maps/: midi_mapping.yaml  pdtracks_mapping.yaml
src/main/resources/base/rlrr_files/: MIDI_sample_converted.json  converted.json
ui/: ConvertToPy.bat  ParadiddleUtilities.ui
workflows/: build.yml  build2.yml
(+18 files in other folders)
