[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ParadiddleUtilities"
version = "0.7.4"
authors = [
    {name = "Emre Tanirgan"},
    {name = "Emma Pisarsky"}
]
description = "Utility apps and libraries for Paradiddle, currently containing the song creator."
readme = {file = "README.md", content-type = "text/markdown"}

dependencies = [
    "altgraph==0.17.4",
    "cffi==1.17.1",
    "macholib==1.16.3",
    "mido==1.3.0",
    "packaging==23.2",
    "pycparser==2.21",
    "pyinstaller",
    "pyinstaller-hooks-contrib",
    "PyQt5==5.15.9",
    "PyQt5-Qt5==5.15.2",
    "PyQt5-sip==12.16.1",
    "python-rtmidi==1.5.8",
    "PyYAML==6.0.2",
    "soundfile==0.12.1",
    "requests",
    "pyogg",
    "simpleaudio"
]

[project.urls]
Homepage = "https://www.paradiddleapp.com/"
Repository = "https://www.github.com/emretanirgan/ParadiddleUtilities"
Issues = "https://www.github.com/emretanirgan/ParadiddleUtilities/issues"

[tool.setuptools]
packages = []
py-modules = []