[build-system]
requires = ["poetry-core", "poetry-pyinstaller-plugin"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ParadiddleUtilities"
version = "0.7.4"
authors = [
    {name = "Emre Tanirgan"},
    {name = "Emma Pisarsky"}
]
description = "Utility apps and libraries for Paradiddle, currently containing the song creator."
readme = {file = "README.md", content-type = "text/markdown"}

dependencies = [
    "altgraph",
    "cffi",
    "macholib",
    "mido",
    "packaging",
    "pycparser",
    "pyinstaller",
    "pyinstaller-hooks-contrib",
    "PyQt5",
    "PyQt5-Qt5",
    "PyQt5-sip",
    "python-rtmidi",
    "PyYAML",
    "soundfile",
    "requests",
    "soundfile",
    "sounddevice",
    "numpy",
    "poetry",
    "poetry-pyinstaller-plugin"
]

packages = [
    {include = "PDUtilities"}
]

[project.urls]
Homepage = "https://www.paradiddleapp.com/"
Repository = "https://www.github.com/emretanirgan/ParadiddleUtilities"
Issues = "https://www.github.com/emretanirgan/ParadiddleUtilities/issues"


[tool.poetry-pyinstaller-plugin]
scripts = [
    {name = "PDUtilities", source = "PDUtilities.__main__", type = "onedirectory"}
]