[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ParadiddleUtilities"
requires-python = ">=3.10"
version = "0.8.0"
authors = [
    {name = "Emre Tanirgan"},
    {name = "Emma Pisarsky"}
]
description = "Utility apps and libraries for Paradiddle, currently containing the song creator."
readme = {file = "README.md", content-type = "text/markdown"}


dependencies = [
    "altgraph",
    "cffi",
    "macholib",
    "mido",
    "packaging",
    "pycparser",
    "pyinstaller",
    "pyinstaller-hooks-contrib",
    "PyQt5",
    "PyQt5-Qt5",
    "PyQt5-sip",
    "python-rtmidi",
    "PyYAML",
    "soundfile",
    "requests",
    "sounddevice",
    "numpy"
]

[project.urls]
Homepage = "https://www.paradiddleapp.com/"
Repository = "https://www.github.com/emretanirgan/ParadiddleUtilities"
Issues = "https://www.github.com/emretanirgan/ParadiddleUtilities/issues"

[tool.setuptools]
packages = []
py-modules = []